tests/parsing/smtlib/v2.6/errors/112_set-logic_bad_symbol_1.expected
File "tests/parsing/smtlib/v2.6/errors/112_set-logic_bad_symbol_1.smt2", line 1, character 11-12:
1 | (set-logic _)
               ^
Error while parsing a set-logic command, read the reserved word '_',
      but expected a symbol for the logic name.
